Fixed css making hidden elements visible.

--- a/CompWolf.Docs/compwolf.docs.client/src/styles/globals.css
+++ b/CompWolf.Docs/compwolf.docs.client/src/styles/globals.css
@@ -11,6 +11,10 @@
     background: var(--background);
 }
 
+*[hidden] { /* Stop css from making hidden elements visible */
+    display: none !important;
+}
+
 h1, h2, h3, h4, h5, h6 {
     margin: 0 0 0 0;
 }
